.devcontainer/local-ansible/k8s/airflow/ingress-tls.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: airflow-server-tls
  namespace: airflow
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`airflow.127.0.0.1.sslip.io`)
      priority: 10
      services:
        - name: airflow-webserver
          port: 8080
    - kind: Rule
      match: Host(`airflow.127.0.0.1.sslip.io`)
      priority: 11
      services:
        - name: airflow-webserver
          port: 8080
  tls:
    secretName: airflow-crt
#    options: {}
